--- a/Lab4Struts2/WebContent/index.html
+++ b/Lab4Struts2/WebContent/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>VictorDov Struts2</title>
-</head>
-<body>
-Hello, welcome to Struts 2 Tutorial
-</body>
-</html>
+<HTML>
+<HEAD>
+<META HTTP-EQUIV=Refresh
+	CONTENT="0; url=index">
+</HEAD>
+</HTML>
+<!-- This redirects to my python script that grabs the contact us HTML & prints it out(shows the webpage HTML) -->
